k8s-ingress-gateway-setup/app2/manifest.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: roboshop
  name: frontend
  labels:
    proj: roboshop
    env: dev
    deployment: k8s
    tier: webservice
spec:
  selector:
    tier: webservice
  ports:
    - port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: roboshop
  name: frontend
  labels:
    proj: roboshop
    env: dev
    deployment: k8s
    tier: webservice
spec:
  replicas: 1
  selector:
    matchLabels:
      tier: webservice
  template:
    metadata:
      name: frontend
      labels:
        proj: roboshop
        env: dev
        deployment: k8s
        tier: webservice
  spec:
    containers:
            - name: frontend
              image: rakeshakuluru/webservice:2.2.2
              imagePullPolicy: Always
              ports:
                - containerPort: 80
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  namespace: roboshop
  name: httproute
  labels:
    proj: roboshop
    env: dev
    deployment: k8s
    tier: webservice
spec:
  parentRefs:
    - name: aws-test-lb-gw-listeners
  hostnames:
    - "app2.rkak87.online"
  rules:
    - matches:
      - path:
          type: PathPrefix
          value: /
      backendRefs:
        - name: frontend
